# llm-inference-runtime

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.sh
api/: client.py  main.py
benchmark/: load_test.py  metrics.py
dashboard/: app.py
results/benchmarks/: results_20260627_172417.json  results_20260628_194442.json  results_20260628_194939.json  results_20260628_204343.json  results_20260628_210258.json  results_20260628_210740.json  results_20260628_211004.json  results_20260628_211308.json
runtime/: batcher.cpp  batcher.h  inference.cpp  inference.h  kvcache.cpp  kvcache.h  queue.cpp  queue.h  scheduler.cpp  scheduler.h  server.cpp
